--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
     "url-loader": "^4.1.0"
   },
   "dependencies": {
-    "node-sass": "^4.14.1",
     "@reach/router": "^1.3.3",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
