--- a/package.json
+++ b/package.json
@@ -53,18 +53,23 @@
   "dependencies": {
     "@reach/router": "^1.3.3",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "filepond": "^4.13.6",
     "filepond-plugin-file-encode": "^2.1.5",
     "filepond-plugin-image-preview": "^4.6.4",
     "filepond-plugin-image-resize": "^2.0.7",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
+    "precss": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.43.0",
